--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
     </header>
 
     <fieldset>
-
-        <div class="img">
-            <img src="surveyform.jpg" alt="Survey form image" height="200px">
-        </div>
-
         <div class="section">
             <form action="https://enw7u145b8im9.x.pipedream.net/" method="post">
                 <fieldset>
                     <legend>Name</legend>
-                    <p class="information">First Name : <input type="text" name="first_name" class="box" id="1" required></p>
-                    <p class="information">Last Name: <input type="text" name="last_name" class="box" id="2" required></p>
+                    <p class="information">First Name : <input type="text" name="first_name" class="box" id="1"
+                            required></p>
+                    <p class="information">Last Name: <input type="text" name="last_name" class="box" id="2" required>
+                    </p>
                 </fieldset>
                 <br>
                 <fieldset>
@@ -39,7 +36,8 @@
                 <br>
                 <fieldset>
                     <legend>Contact Number</legend>
-                    <p class="information">Contact No. : <input type="number" name="contact_number" class="box" required></p>
+                    <p class="information">Contact No. : <input type="number" name="contact_number" class="box"
+                            required></p>
                 </fieldset>
                 <br>
         </div>
